working out a bug on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,16 +54,6 @@
             white-space: nowrap;
             width: 1px;
         }
-        /* #content-wrapper {
-            position: relative;
-            box-sizing: border-box;
-            height: auto;
-            width: 100%;
-            overflow: hidden;
-            min-height: 100vh;
-            background: black;
-            padding: 7em 0em;
-        } */
         
         #slider {
             position: relative;
@@ -245,13 +235,14 @@
             box-shadow: 0 3px 17px rgba(0, 0, 0, 0.2), 0 5px 6px rgba(0, 0, 0, 0.2);
             transform: translate3d(0%, 0, 0px);
             filter: brightness(95%);
+            background-color: transparent;
         }
         
-        #s1:checked~#slide1:hover~#slider-controls,
-        #s2:checked~#slide2:hover~#slider-controls,
-        #s3:checked~#slide3:hover~#slider-controls,
-        #s4:checked~#slide4:hover~#slider-controls,
-        #s5:checked~#slide5:hover~#slider-controls {
+        #s1:checked~#slide1:hover,
+        #s2:checked~#slide2:hover,
+        #s3:checked~#slide3:hover,
+        #s4:checked~#slide4:hover,
+        #s5:checked~#slide5:hover {
             transform: scale3d(1.2, 1.2, 1.2);
             transition: all 0.8s ease-in-out;
             filter: brightness(100%);
@@ -260,6 +251,15 @@
             padding: 1px;
             background: hsl(0deg 0% 100%);
             box-shadow: 0 0 0 8px hsl(0deg 2.05% 26.29%), 0 0 0 6px hsl(60deg 1.32% 3.85%);
+        }
+        
+        #s1:checked~#slide1:hover~#slider-controls,
+        #s2:checked~#slide2:hover~#slider-controls,
+        #s3:checked~#slide3:hover~#slider-controls,
+        #s4:checked~#slide4:hover~#slider-controls,
+        #s5:checked~#slide5:hover~#slider-controls {
+            background-color: #000;
+            opacity: 0.5;
         }
         /* Next Slide */
         
@@ -337,7 +337,7 @@
                 justify-content: center;
             }
             input[type="radio"] {
-                position: revert;
+                /* position: revert; */
                 bottom: 0;
                 z-index: 30000;
                 opacity: 1;
